# vd17-analysis

./: .gitignore  .lintr  .pre-commit-config.yaml  DESCRIPTION  all_match.csv  db_params.yaml  pyproject.toml  top_20_fbs.xlsx  top_authors_fbs.xlsx  top_authors_vd17.xlsx
Narges/data/: Member_GNDs_Masterfile.xlsx  fbs.csv  fbs_record_number.csv
code/: common_basis.R  create_db.Rmd  create_db.nb.html
code/jiemakel/: FBS_master_link_data_evaluation.Rmd  FBS_master_link_data_evaluation.nb.html  analyse-vd17.Rmd  analyse-vd17.nb.html  create_genre_table.Rmd  create_genre_table.nb.html  explore-editions.Rmd  explore-editions.nb.html  fbs_analyses.Rmd
code/maciejjan/: Makefile  README.md  cap.att  morle-config.ini  names_to_vd17.xfst  requirements.txt
code/narges/: Visualization- Society-related genres by genre category- Numbers over time.Rmd  Visualization- Society-related genres by genre category- Numbers over time.nb.html  all-gnd-vd17-gender.Rmd  fbs-analysis-part1.Rmd  fbs-analysis-part1.nb.html  fbs-analysis-part2.Rmd  fbs-analysis-part2.nb.html  fbs-analysis.Rmd  fbs-analysis.html  fbs-dedicatees-genre.Rmd  fbs-dedicatees-genre.nb.html  fbs-no-genre-rescue.Rmd  fbs-publication-genre.Rmd  fbs-publication-genre.nb.html  fbs-publication-new-genre.Rmd  fbs-translations-genre.Rmd  fbs-translations-genre.nb.html  fbs-translations-new-genre.Rmd  fbs-vd17-rescue.Rmd  fbs_dedicatees.Rmd  fbs_dedicatees_new_genre.Rmd  first_and_family_names.Rmd  gender.Rmd  gender.nb.html  (+5 more)
renv/: activate.R
src/: common_basis.R  common_basis.py  create_db.Rmd  create_db.nb.html
(+204078 files in other folders)
