[tool.poetry]
name = "vd17-analysis"
version = "0.1.0"
description = ""
authors = ["HSCI research group <grp-hsci@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
