[tool.poetry]
name = "vd17-analysis"
version = "0.1.0"
description = ""
authors = ["HSCI research group <grp-hsci@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.3"
jupyterlab = "^4.0.2"
hereutil = "^0.1.3"
pymysql = "^1.0.3"
jupyter = "^1.0.0"
keyring = "^23.13.1"
sqlalchemy = "^2.0.16"
roman = "^4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
